# data-analysis-engine

./: .gitignore  README.md  app.py  problemstatement.txt  pyproject.toml  requirements.txt
src/data_analysis_engine/: __init__.py  __main__.py  analytics.py  data_generation.py
